# monzo-mcp

./: Makefile  pyproject.toml
monzo_mcp/: __init__.py  __main__.py  client.py  server.py
