[project]
name = "monzo-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=2.2.6",
    "httpx>=0.28.1",
    "mcp[cli]>=1.7.1",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
]

[project.scripts]
monzo_mcp = "monzo_mcp.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]
